fixed z-index on modal

--- a/src/App.css
+++ b/src/App.css
@@ -406,7 +406,7 @@ textarea{
 /* --------------------------------------------------------Modal  */
 
 .modal{
-  z-index: 1;
+  z-index: 3;
   position: fixed;
   top: 64px;
   /* padding: 32px; */
